--- a/src/PGS/CoreDomainBundle/Resources/views/Widget/organization_selector.html.twig
+++ b/src/PGS/CoreDomainBundle/Resources/views/Widget/organization_selector.html.twig
@@ -1,5 +1,5 @@
-{% set organizationId = active_organization_preference() is null ? null : active_organization_preference().id %}
-{% set organizations = list_organizations() %}
+{% set principalId = active_principal_preference() is null ? null : active_principal_preference().id %}
+{% set principals = list_principals() %}
 
 <ul class="list-unstyled list-inline pull-right" style="padding-top:12px;">
     <!-- BEGIN SCHOOLS -->
